--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+/Terremoto1939/DerivedDataCache/
+/Terremoto1939/Intermediate/
+/Terremoto1939/Saved/
+/Terremoto1939/Binaries/
+/Terremoto1939/Build/
+
 # Visual Studio 2015 user specific files
 .vs/
 
