--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,8 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+Terremoto1939/ejecutable/Android_ASTC/Install_Terremoto1939-arm64.bat
+Terremoto1939/ejecutable/Android_ASTC/main.1.com.YourCompany.Terremoto1939.obb
+Terremoto1939/ejecutable/Android_ASTC/Terremoto1939-arm64.apk
+Terremoto1939/ejecutable/Android_ASTC/Uninstall_Terremoto1939-arm64.bat
+Terremoto1939/ejecutable/FullLog.txt
