--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,7 @@ Terremoto1939/ejecutable/Android_ASTC/main.1.com.YourCompany.Terremoto1939.obb
 Terremoto1939/ejecutable/Android_ASTC/Terremoto1939-arm64.apk
 Terremoto1939/ejecutable/Android_ASTC/Uninstall_Terremoto1939-arm64.bat
 Terremoto1939/ejecutable/FullLog.txt
+Terremoto1939/Ejecutable2/Android_ASTC/Install_Terremoto1939-arm64.bat
+Terremoto1939/Ejecutable2/Android_ASTC/main.1.com.YourCompany.Terremoto1939.obb
+Terremoto1939/Ejecutable2/Android_ASTC/Terremoto1939-arm64.apk
+Terremoto1939/Ejecutable2/Android_ASTC/Uninstall_Terremoto1939-arm64.bat
